Fixed MR notifications